@@ -1,3 +1,10 @@
+== 2026-02-15 23:38 == Bugfix: Claim log showing channel ID instead of name (v1.2.0-beta.12) ==
+
+Claims from untracked channels (via user-level PubSub) showed raw channel ID
+instead of display name. Now resolves name via GQL and caches it.
+- internal/farmer/farmer.go (nameCache, resolveChannelName, claim handler)
+- internal/twitch/gql.go (GetChannelNameByID query)
+
 == 2026-02-15 03:37 == Bugfix: Auto-select not triggering when matched channels are offline (v1.2.0-beta.11) ==
 
 Auto-select for drop channels only triggered when zero channels matched a campaign.
